feature: add mongoose

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "no-console": "error",
+    "no-console": "off",
     "no-process-env": "error",
     "import/prefer-default-export": "off",
     "@typescript-eslint/comma-dangle": "off",
